--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière 
 	d’immigration. En revanche,<!-- les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux 
 	réfugiés qui sont définies dans les lois nationales et les lois internationales.--> le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des
-	réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies et c’est une condition nécessaire pour entrer dans l’Union Européenne</p> 
+	réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies et c’est une condition nécessaire pour entrer dans l’Union Européenne.</p> 
 	<!-- <p>En particulier, les réfugiés doivent être accueillis quelle que soit leur situation économique.
 	La création d'un statut à part avait pour vocation de protéger systématiquement les personnes confrontées à des 
 	situations dramatiques dans leur pays d'origine. Toutefois, certains travaux en sociologie, et notamment l'article de
