--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				
+			<nav id="nav">			
 			<ul>	
                 <div id='buttons'>
                    <li> <a href='https://www.facebook.com/sharer.php?u=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target="_blank">
@@ -78,6 +78,7 @@
                 
                 </div>				
 			</ul>
+			</nav>
 
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
