--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
 		<!-- Header -->
 			<header id="header">			
 				<h1><a href="index.html"></a></h1>
-				<br>
+				<ul class="list">
 				<div id='buttons'>
-                   <a href='https://www.facebook.com/sharer.php?u=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target="_blank">
+                   <li> <a href='https://www.facebook.com/sharer.php?u=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target="_blank">
                             <img width="50" height="50" src="images/facebook.png" alt="Facebook" />
-			   </a> <br>
-                    <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://pregoles.github.io/migmig&title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target='_blank'>
+			   </a> </li>
+                    <li> <a href='https://www.linkedin.com/shareArticle?mini=true&url=http://pregoles.github.io/migmig&title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees' target='_blank'>
                         <img width="50" height="50" src="images/linkedin.png" alt="LinkedIn" />
-			    </a> <br>
-                    <a href="https://twitter.com/share?url=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees" target="_blank">
+			    </a> </li>
+                    <li> <a href="https://twitter.com/share?url=https://pregoles.github.io/migmig&amp;title=Lumi%C3%A8re%20sur%20les%20migrations&summary=Visualisation%20de%20donnees" target="_blank">
                         <img width="50" height="50" src="images/twitter.png" alt="Twitter" />
-                    </a> <br>
+			    </a> </li>
                 
                 </div>				
-
+				</ul>
 				<nav id="nav">
 					<ul>
 						<li><a style="color:white" href="#one"> <font size="+1">De quoi parle-t-on ? </font ></a></li>
