--- a/index.html
+++ b/index.html
@@ -134,12 +134,13 @@
 			<h2> Éclairage sur la situation mondiale en un graphique </h2>	
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: center">
-				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR)</font> </h4>
+				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans</font> </h4>
 				<br> <font color="#24292E">Depuis 2006, il y a plus de déplacés internes que de réfugiés depuis 2006 </font>
 				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012 </font>
 				<div id="container" > </div>
 				<div style="display:flex;flex-direction:column; text-align: justify">
-					<center> Cliquez sur la légende pour voir le changement d'échelles. </center>
+					<font size="-1"><center> Source: UNHCR </center> </font> <br>
+					<font size="-1"> <center> Cliquez sur la légende pour voir le changement d'échelles. </center> </font>
 <br>
 				</div>
 			
