--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 		<br>
 		Les personnes reconnues <b style="font-weight:bold ; color: #29AB87" > réfugiées </b> en France bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br>
 		<br> 
-		Le bénéfice de la <b style="font-weight:bold ; color:  #004953" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave. 
-		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b style="font-weight:bold ; color:  #004953" > un an renouvelable</b>. <br>
+		Le bénéfice de la <b style="font-weight:bold ; color:  #D1E231" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave. 
+		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b style="font-weight:bold ; color: #D1E231" > un an renouvelable</b>. <br>
 		<br>
 		Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas 
 		de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts.  
