--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012 </font>
 				<div id="container" > </div>
 				<div style="display:flex;flex-direction:column; text-align: justify">
-					<font size="-1"><center> Source: UNHCR </center> </font> <br>
+					<font size="-1"><center> Source: UNHCR </center> </font>
 					<font size="-1"> <center> Cliquez sur la légende pour voir le changement d'échelles. </center> </font>
 <br>
 				</div>
@@ -216,11 +216,14 @@
 		Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas 
 		de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts.  
 </div>
+	<div> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
+
 	<div style="diplay:flex;flex-direction:column; align-self:center;">
 	<div id="alienor">
 
 </div>
-	<div> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
+	<div> <font size="-1" color="white"> Source: Eurostat </font> </div>
+
 	</div>
 			</div>
 		</section> 
