--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: center">
 				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans</font> </h4>
-				<br> <font color="#24292E">Depuis 2006, il y a plus de déplacés internes que de réfugiés depuis 2006 </font>
-				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012 </font>
+				<br> <font color="#24292E">Depuis 2006, il y a plus de déplacés internes que de réfugiés.</font>
+				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012. </font>
 				<div id="container" > </div>
 				<div style="display:flex;flex-direction:column; text-align: justify">
 					<font size="-1"><center> Source: UNHCR </center> </font>
@@ -295,7 +295,7 @@
 				
 				<script id="infogram_0_map-9075157905404" title="Map" src="//e.infogr.am/js/dist/embed.js?H42" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:0px solid #dadada;margin:0 30px"><a href="https://infogr.am/map-9075157905404" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Map</a><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
 	</div>
-<div> <font size="-1" color="white"> Source: Eurostat </font> </div>
+<div> <font size="-1" color="black"> Source: Eurostat </font> </div>
 	<div class="container" style="display:flex;justify-content:space-between;">
 	<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
 		Pour accéder aux détails en valeur absolue et relative, passez votre souris sur chacun des pays ou sur la barre graduée. La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays.
@@ -322,16 +322,19 @@
 <!-- Origine -->
 
 
-<section id="two" class="wrapper style13 align-center">
+<!--<section id="two" class="wrapper style13 align-center">-->
 		<h2> Evolution des demandes d'asile </h2>
 	<h3> Des vagues successives liées à des événements historiques </h3>
+	<font color="#24292E">L'éclatement du bloc soviétique et les guerres civiles en ex-Yougoslavie expliquent l'augmentation des demandes d'asile à la France dans les années 1990 et 2000.</font>
 <div class="container" >
 
 <div id="asile"></div>
 <!-- <div id="asile" style="min-width: 400px; height: 400px; margin: 0 auto"></div> -->
 
 	</div>
-</section>
+<div> <font size="-1" color="white"> Source: OFPRA </font> </div>
+
+<!--</section>-->
 			
 			<h2> Les demandeurs d'asile : d'où viennent-ils? </h2>
 <div> <font color="#24292E"> 10 principaux pays d'origine des demandeurs d'asile en France (2014 et 2015, premières demandes) </font> </div> <br>
@@ -342,15 +345,18 @@
 <iframe id="datawrapper-chart-sIMjl" src="//datawrapper.dwcdn.net/sIMjl/4/" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["sIMjl"]={},window.datawrapper["sIMjl"].embedDeltas={"100":306,"200":306,"300":306,"400":306,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["sIMjl"].iframe=document.getElementById("datawrapper-chart-sIMjl"),window.datawrapper["sIMjl"].iframe.style.height=window.datawrapper["sIMjl"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["sIMjl"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("sIMjl"==b)window.datawrapper["sIMjl"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
 <!-- <iframe id="datawrapper-chart-sIMjl" src="//datawrapper.dwcdn.net/sIMjl/4/" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" width="100%" height="322"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["sIMjl"]={},window.datawrapper["sIMjl"].embedDeltas={"100":306,"200":306,"300":306,"400":306,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["sIMjl"].iframe=document.getElementById("datawrapper-chart-sIMjl"),window.datawrapper["sIMjl"].iframe.style.height=window.datawrapper["sIMjl"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["sIMjl"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("sIMjl"==b)window.datawrapper["sIMjl"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script> -->
 			</div>
+<div> <font size="-1" color="white"> Source: OFPRA </font> </div>
 	
 			<h2> Quel âge ont-ils? </h2>
 			
 			<h4> Répartition par âge des demandeurs d'asile (ressortissants d'un pays tiers) en UE en 2015 (premières demandes) </h4>
-<div style ="text-align: justify"> <font color="#24292E"> Près d'un tiers des demandeurs d'asile sont mineurs. </font> </div> <br>
+<font color="#24292E"> Près d'un tiers des demandeurs d'asile sont mineurs. </font><br>
 <!-- Composition par âge de la population migrante -->
 <div class="container">
 <div class="infogram-embed" data-id="88c3dfb3-409c-4a2c-8356-f43c5472e55a" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
 			</div>
+<div> <font size="-1" color="white"> Source: Eurostat </font> </div>
+
 		</section>
 		
 	<!-- Quatrième partie Quentin-->	
