--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <section id="two" class="wrapper style12 align-center">
 			<div class="container">
 				<header>
-					<h2>Répartition géographique des demandes d'asile en Europe</h2>
+					<h2>Répartition géographique des demandes d'asile et des taux d'acceptation en Europe</h2>
 					<div style="color:#004953;text-align: justify;"> La France reçoit 6 fois moins de demandes d'asile que l'Allemagne et accepte une proportion moindre de demandes. En 2015, 70 570 demandes d'asile ont été déposées en France par des individus ressortissants d'un pays n'appartenant pas à l'Union Européenne. 29% ont été acceptées. Le pays qui accepte la plus grande part relative des demandes qu'il reçoit est Chypre, avec un taux de 75%, suivi de Malte (74%) et du Danemark (48%). </div>
 				</header>				
 				
