--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 	</div>
 <div> <font size="-1" color="black"> Source: Eurostat </font> </div>
 	<div class="container" style="display:flex;justify-content:space-between;">
-	<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
+	<div size="-1" style="color:black; text-align: justify;text-justify: inter-word;">  <br>
 		Pour accéder aux détails en valeur absolue et relative, passez votre souris sur chacun des pays ou sur la barre graduée. La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays.
 	</div>
 	</div>
