--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012. </font>
 				<div id="container" > </div>
 				<div style="display:flex;flex-direction:column; text-align: justify">
-					<font size="-1"><center> Source: UNHCR </center> </font>
-					<font size="-1"> <center> Cliquez sur la légende pour voir le changement d'échelles. </center> </font>
+					<font size="-1"><center> Source: UNHCR <br>
+					Cliquez sur la légende pour voir le changement d'échelles. </center> </font>
 <br>
 				</div>
 			
@@ -296,12 +296,13 @@
 				
 				<script id="infogram_0_map-9075157905404" title="Map" src="//e.infogr.am/js/dist/embed.js?H42" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:0px solid #dadada;margin:0 30px"><a href="https://infogr.am/map-9075157905404" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Map</a><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
 	</div>
-<div> <font size="-1" color="black"> Source: Eurostat </font> </div>
-	<div class="container" style="display:flex;justify-content:space-between;">
-	<div size="-1" style="color:black; text-align: justify;text-justify: inter-word;">  <br>
+<div> <font size="-1" color="black"> Source: Eurostat 
+<!--	<div class="container" style="display:flex;justify-content:space-between;">
+	<div size="-1" style="color:black; text-align: justify;text-justify: inter-word;">-->  <br>
 		Pour accéder aux détails en valeur absolue et relative, passez votre souris sur chacun des pays ou sur la barre graduée. La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays.
-	</div>
-	</div>
+</font> </div>
+	<!--</div>
+	</div>-->
 	
 </section>
 
@@ -326,7 +327,8 @@
 <!--<section id="two" class="wrapper style13 align-center">-->
 		<h2> Evolution des demandes d'asile </h2>
 	<h3> Des vagues successives liées à des événements historiques </h3>
-	<font color="#24292E">L'éclatement du bloc soviétique et les guerres civiles en ex-Yougoslavie expliquent l'augmentation des demandes d'asile à la France dans les années 1990 et 2000.</font>
+	<font color="#24292E">L'éclatement du bloc soviétique et les guerres civiles en ex-Yougoslavie expliquent <br>
+		l'augmentation des demandes d'asile à la France dans les années 1990 et 2000.</font>
 <div class="container" >
 
 <div id="asile"></div>
