--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 	</div>
 <div> <font size="-1" color="black"> Source: Eurostat </font> </div>
 <div class="container" style="display:flex;justify-content:space-between;">
-	<div size="-1" style="color:black; text-align: justify;text-justify: inter-word;">
-		Pour accéder aux détails en valeur absolue et relative, passez votre souris sur chacun des pays ou sur la barre graduée. La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays.
+	<div style="color:black; text-align: justify;text-justify: inter-word;">
+		<font size="-1"> Pour accéder aux détails en valeur absolue et relative, passez votre souris sur chacun des pays ou sur la barre graduée. La gradation se fait suivant le taux d'acception du nombre total de demandes d'asile que reçoit un pays.</font>
 	</div>
 	</div>
 	
@@ -326,9 +326,10 @@
 <!--<section id="two" class="wrapper style13 align-center">-->
 		<h2> Evolution des demandes d'asile </h2>
 	<h3> Des vagues successives liées à des événements historiques </h3>
-		<div style="text-align: justify;text-justify: inter-word;">
-<font color="#24292E">L'éclatement du bloc soviétique et les guerres civiles en ex-Yougoslavie expliquent l'augmentation des demandes d'asile à la France dans les années 1990 et 2000.</font>
-			</div>
+	<!--	<div style="text-align: justify;text-justify: inter-word;">-->
+<font color="#24292E">L'éclatement du bloc soviétique et les guerres civiles en ex-Yougoslavie expliquent <br>
+	l'augmentation des demandes d'asile à la France dans les années 1990 et 2000.</font>
+			<!--</div>-->
 			<div class="container" >
 
 <div id="asile"></div>
