--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 				<div style="font-size: 250px;">
 				<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 				</div>
-			<h2 class="animated fadeInUpBig" style="color:#004953">Lumière sur les migrations</h2>
+			<h2 class="animated fadeInUpBig" style="color:#004953">Lumière sur <br>
+				les migrations</h2>
 				<h3 style="color:white">Déchiffrer la "crise des migrants" en Europe et en France </h3>
                 				
 			</section>
