--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<ul>
 						<li><a style="color:white" href="#one"> <font size="+1">De quoi parle-t-on ? </font ></a></li>
 						<li><a style="color:white" href="#two"><font size="+1">En Europe</font ></a></li>
-						<li><a style="color:black" href="#france"><font size="+1">En France</font ></a></li>
+						<li><a style="color:white" href="#france"><font size="+1">En France</font ></a></li>
 						<li><a style="color:white" href="#pol"><font size="+1">Immigration et politique</font ></a></li>
 						<li><a style="color:white" href="#quizz"><font size="+1">Quizz</font ></a></li>
 						<li><a style="color:white" href="#init"><font size="+1">Initiatives</font ></a></li>					
