--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 <section id="two" class="wrapper style12 align-center">
 			<div class="container">
 				<header>
-					<h2>Répartition géographique des demandes d'asile et des taux d'acceptation en Europe</h2>
+					<h2>Répartition géographique des demandes d'asile et des taux de demandes acceptées en Europe</h2>
 					<div style="color:#004953;text-align: justify;"> La France reçoit 6 fois moins de demandes d'asile que l'Allemagne et accepte une proportion moindre de demandes. En 2015, 70 570 demandes d'asile ont été déposées en France par des individus ressortissants d'un pays n'appartenant pas à l'Union Européenne. 29% ont été acceptées. Le pays qui accepte la plus grande part relative des demandes qu'il reçoit est Chypre, avec un taux de 75%, suivi de Malte (74%) et du Danemark (48%). </div>
 				</header>				
 				
@@ -993,11 +993,11 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<ul class="alt">
 								<li><a href="https://popstats.unhcr.org/en/overview">UNHCR</a></li>
 								<li><a href="https://www.therefugeeproject.org">The Refugee Project</a></li>
-								<li><a href="https://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
+								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
 								<li><a href="https://ec.europa.eu/home-affairs/sites/homeaffairs/files/what-we-do/policies/european-agenda-migration/press-material/docs/state_of_play_-_relocation_en.pdf">La Commission européenne</a></li>								
-								<li><a href="https://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
+								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a></li>
-							Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/">Sebastião Salgado</a> pour illustrer notre propos.
+							<li> Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/">Sebastião Salgado</a> pour illustrer notre propos.</li>
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
