--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
 
 <!--<section id="two" class="wrapper style13 align-center">-->
-		<h2> Evolution des demandes d'asile </h2>
+		<h2> Évolution des demandes d'asile </h2>
 	<h3> Des vagues successives liées à des événements historiques </h3>
 	<!--	<div style="text-align: justify;text-justify: inter-word;">-->
 <font color="#24292E">L'éclatement du bloc soviétique et les guerres civiles en ex-Yougoslavie expliquent <br>
@@ -992,7 +992,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<p>D'où viennent les chiffres présentés ? Nous tenons à préciser qu'il est par définition difficile de récolter des données sur les personnes déplacées, et qu'il est nécessaire de croiser plusieurs sources pour refléter au mieux la situation. Nous nous sommes efforcés à n'utiliser que des sources officielles :</p>
 							<ul class="alt">
 								<li><a href="https://popstats.unhcr.org/en/overview">UNHCR</a></li>
-								<li><a href="https://www.therefugeeproject.org">The Refugee Project</a></li>
+								<li><a href="http://www.therefugeeproject.org">The Refugee Project</a></li>
 								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
 								<li><a href="https://ec.europa.eu/home-affairs/sites/homeaffairs/files/what-we-do/policies/european-agenda-migration/press-material/docs/state_of_play_-_relocation_en.pdf">La Commission européenne</a></li>								
 								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
