--- a/index.html
+++ b/index.html
@@ -1018,10 +1018,14 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 						<section class="4u$ 12u$(medium) 12u$(small)">
 							<h3>Qui sommes-nous ?</h3>
 							<ul class="icons">
-								<p> <li>  <a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> Aliénor Anido  </li><br></p>
-								<p><li>  <a href="https://www.linkedin.com/in/qcavalan/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>  Quentin Cavalan </li><br></p>
-								<p><li>  <a href="#" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> Adeline Guéret</li> <br></p>
-								<p><li>  <a href="https://fr.linkedin.com/in/ir%C3%A8ne-hu-88a3648b" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>  Irène Hu </li></p>
+								<li>  <a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li> <a href="mailto:alienor.anido@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li> Aliénor Anido <br>
+								<li>  <a href="https://www.linkedin.com/in/qcavalan/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> </li>
+								<li> <a href="mailto:quentin.cavalan@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li>  Quentin Cavalan <br>
+								<li>  <a href="#" class="icon rounded fa-twitter"><span class="label">LinkedIn</span></a> </li>
+								<li> <a href="mailto:adeline.gueret@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li> Adeline Guéret <br>
+								<li>  <a href="https://fr.linkedin.com/in/ir%C3%A8ne-hu-88a3648b" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> </li>
+								<li> <a href="mailto:irene.hu@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li>  Irène Hu <br>
 
 							</ul>
 							<ul class="tabular">
@@ -1036,9 +1040,8 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 						</section>
 					</div>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; All rights reserved.</li>
+						<li>Images: <a href="https://www.amazonasimages.com/">Sebastião Salgado</a></li>
 					</ul>
 				</div>
 				
