--- a/index.html
+++ b/index.html
@@ -1016,14 +1016,17 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
-							<h3>Qui sommes-nous ?</h3>
+							<h3>Qui sommes-nous ?</h3> 
+							    <u1 style="text-align: right">
+							     <img src="images/ensae.png" width="200" height="80"/> 
+							    </u1>
 							<ul class="icons">
 								<li>  <a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li> <a href="mailto:alienor.anido@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li> Aliénor Anido <br>
 								<li>  <a href="https://www.linkedin.com/in/qcavalan/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> </li>
 								<li> <a href="mailto:quentin.cavalan@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li>  Quentin Cavalan <br>
 								<li>  <a href="#" class="icon rounded fa-twitter"><span class="label">LinkedIn</span></a> </li>
-								<li> <a href="mailto:adeline.gueret@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li> Adeline Guéret <br>
+								<li> <a href="mailto:adeline.gueret@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li> Adeline Gueret <br>
 								<li>  <a href="https://fr.linkedin.com/in/ir%C3%A8ne-hu-88a3648b" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> </li>
 								<li> <a href="mailto:irene.hu@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li>  Irène Hu <br>
 
