--- a/index.html
+++ b/index.html
@@ -1017,9 +1017,11 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
 							<h3>Qui sommes-nous ?</h3> 
+							 <a href="http://www.ensae.fr/">
 							    <u1 style="text-align: right">
 							     <img src="images/ensae.png" width="200" height="80"/> 
 							    </u1>
+							</a>	 
 							<ul class="icons">
 								<li>  <a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li> <a href="mailto:alienor.anido@ensae.fr" class="icon rounded fa-envelope-o fa-fw"><span class="label">LinkedIn</span></a></li> Aliénor Anido <br>
