--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Emmanuel Macron... <br> 
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Emmanuel Macron : à compléter <br> 
 </div>
 </div>
 	
@@ -478,7 +478,7 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon...
+<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon : à compléter
 </div>
 </div>
 	</div>
